--- a/saladict_cleandict.css
+++ b/saladict_cleandict.css
@@ -1,4 +1,3 @@
-/* 查词面板外观参考：Custom Theme [自定义主题] 极简主题 Nexmoe */
 .menuBar {
     background-color: #fff;
     border-bottom: 1px solid #eee;
@@ -11,16 +10,26 @@
 }
 
 .menuBar-SearchBox {
-    color: #000;
+    color: rgba(242, 104, 0);
     background-color: #eee;
     padding: 8px 10px;
     border-radius: 20px;
+    font-weight: bold;
 }
 
-.menuBar-Btn_Icon,
 .menuBar-Btn_Icon-fav,
 .menuBar-Btn_Icon-history {
-    fill: #222;
+    stroke: #222;
+}
+
+.menuBar-Btn_Icon {
+    fill: #000;
+}
+
+.menuBar-Btn_Icon-fav.isActive {
+    fill: rgba(242, 104, 0, .5);
+    stroke: rgba(242, 104, 0);
+    stroke-width: 6%;
 }
 
 .mtaBox-TextArea-Wrap,
@@ -58,9 +67,6 @@
     border-radius: 6px;
 }
 
-
-/* 针对剑桥词典的排版优化 */
-
 /* title模组 */
 .pos-header.dpos-h {
     padding: 15px 0;
@@ -89,12 +95,48 @@ span.irreg-infls.dinfls {
     padding: 5px 4px 1px;
 }
 
-/* 不需要的元素 */
 .dwl.hax,
 .dbtn,
 .daccord {
     display: none;
 }
+
+/* 词义英文 */
+.ddef_h {
+    font-size: 16px;
+    font-weight: bold;
+    background-color: #f7f7f7;
+    padding: 10px;
+}
+
+/* 例句模块 */
+.def-body.ddef_b {
+    padding: 10px 0;
+}
+
+/* 例句英文字体 */
+.eg.deg {
+    color: #7d7d7d;
+    font-size: 15px;
+}
+
+/* 词义-中文释义 */
+.def-body.ddef_b .dtrans {
+    text-decoration: underline wavy 2px;
+    text-decoration-color: rgba(242, 104, 0, .6);
+    font-size: 16px;
+    font-weight: bolder;
+    color: #000000;
+}
+
+/* 例句中文字体 */
+.examp.dexamp .trans.dtrans.dtrans-se.hdb.break-cj {
+    color: #c2c2c2;
+    font-size: 12px;
+    background-color: transparent;
+    text-decoration: none;
+}
+
 
 /* 词义模块 */
 .pr.dsense {
@@ -112,51 +154,14 @@ span.irreg-infls.dinfls {
     padding: 5px 0 10px;
 }
 
-/* 词义英文 */
-.ddef_h {
-    font-size: 16px;
-    font-weight: bold;
-    background-color: #f7f7f7;
-    padding: 10px;
-}
-
-/* 词义-中文释义 */
-.def-body.ddef_b .dtrans {
-    text-decoration: underline wavy 2px;
-    text-decoration-color: rgba(242, 104, 0, .6);
-    font-size: 16px;
-    font-weight: bolder;
-    color: #000000;
-}
-
-/* 例句模块 */
-.def-body.ddef_b {
-    padding: 10px 0;
-}
-
-/* 例句英文字体 */
-.eg.deg {
-    color: #7d7d7d;
-    font-size: 15px;
-}
-
-/* 例句中文字体 */
-.examp.dexamp .trans.dtrans.dtrans-se.hdb.break-cj {
-    color: #c2c2c2;
-    font-size: 12px;
-    background-color: transparent;
-    text-decoration: none;
-}
-
-
-/* 补充内容-模块 */
+/* 补充内容模块 */
 .pr.phrase-block.dphrase-block {
     padding: 10px 10px;
     margin: 10px 0;
     border: 1px dashed #A3CCAB;
 }
 
-/* 补充内容-英文短语 */
+/* 补充内容短语英文 */
 .phrase-head.dphrase_h {
     font-size: 18px;
     color: rgba(242, 104, 0);
@@ -181,6 +186,7 @@ span.irreg-infls.dinfls {
 .xref.grammar.hax.dxref-w.lmt-25.lmb-25,
 .xref.grammars.hax.dxref-w.lmt-25.lmb-25,
 .xref.opposites.hax.dxref-w,
+.xref.opposite.hax.dxref-w,
 .xref.compare.hax.dxref-w {
     padding: 20px 10px;
     margin: 5px 0;
@@ -189,7 +195,7 @@ span.irreg-infls.dinfls {
     background-color: rgba(242, 104, 0, .05) !important;
 }
 
-/* 同义词等-大标题 */
+/* 大标题 */
 strong.xref-title.dxref-t {
     font-size: 20px;
     color: rgba(242, 104, 0);
@@ -199,12 +205,11 @@ strong.xref-title.dxref-t {
     padding: 3px 0;
 }
 
-/* 同义词-用词 */
+/* 同义词用词 */
 span.x-lab.dx-lab {
     padding: 0 6px 0;
 }
 
-/* 同义词-用词地区 */
 span.region {
     color: #75b381;
     font-size: 12px;
@@ -213,7 +218,7 @@ span.region {
     padding: 1px 1.5px 1px;
 }
 
-/* 同义词-用词场合 */
+/* 同义词用词场合 */
 .usage {
     color: #F26800;
     font-size: 12px;
@@ -222,13 +227,13 @@ span.region {
     padding: 1px 1.5px 1px;
 }
 
-/* 同义词-单词 */
+/* 同义词单词 */
 span.x-h.dx-h {
     font-size: 15px;
     font-weight: bold;
 }
 
-/* 同义词-单词补充 */
+/* 同义词单词补充 */
 span.x-num.dx-num {
     font-size: 10px;
 }
